ks1/config/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ksweb
  name: ksweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ksweb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ksweb
    spec:
      containers:
      - image: registry.codinghere.com/smoloney/ks:v1
        name: ksweb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources: {}
      imagePullSecrets:
        - name: harbor-registry
status: {}
