ks1/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ks1
  name: ks1
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: ks1
